...
      if (!result.ok) throw new Error(resultJson.message);
      Alert.alert(
        "Успех",
        "Ваше объявление отправлено на модерацию. Оно будет опубликовано после проверки модератором.",
        [
          {
            text: "OK",
            onPress: () => {
              setIsLoading(false);
              setIsButtonDisabled(false);
              navigation.navigate("House", { houseId: resultJson[0].id });
            },
          },
...
  const [page, setPage] = useState(0);
  const [isButtonDisabled, setIsButtonDisabled] = useState(false);

  const inputListLocation = [
    {
      text: "Населённый пункт*",
      placeholder: "Название населённого пункта",
      valueName: "settlement",
    },
    { text: "Адрес*", placeholder: "Улица, Дом", valueName: "location" },
    {
      text: "Кадастровые номер",
      placeholder: "XX:XX:XXXXXX(X):XX(XX)",
      valueName: "kadastr",
      maxLength: 19,
    },
...
    }
  );

  const inputListHouseinfo = [
    {
      text: "Тип дома",
      placeholder: "Выберите тип дома",
      valueName: "houseType",
      type: "select",
    },
    {
      text: "Год постройки",
      placeholder: "2000",
      valueName: "constructionYear",
      keyboardType: "numeric", // Только цифры
    },
    {
      text: "Этажи",
      placeholder: "Количество этажей",
      valueName: "floors",
      keyboardType: "numeric", // Только цифры
      type: "select",
    },
    {
      text: "Комнаты",
      placeholder: "Количество комнат",
      valueName: "rooms",
      keyboardType: "numeric", // Только цифры
      type: "select",
    },
    {
      text: "Площадь",
      placeholder: "Жилплощадь (м²)",
      valueName: "area",
      keyboardType: "numeric", // Только цифры
    },
    {
      text: "Площадь Участка",
      placeholder: "Площадь участка (сот.)",
      valueName: "plotSize",
      keyboardType: "numeric", // Только цифры
    },
  ];
  const aboutHomePickerList = {
    houseType: [
      { label: "ИЖС", value: "ИЖС" },
      { label: "неИЖС", value: "неИЖС" },
    ],
    constructionYear,
    floors: [
      { label: "1 этаж", value: "1" },
      { label: "2 этажа", value: "2" },
      { label: "3 этажа", value: "3" },
      { label: "4 этажа", value: "4" },
      { label: "5 этажей", value: "5" },
    ],
    rooms: [
      { label: "1 комната", value: "1" },
      { label: "2 комнаты", value: "2" },
      { label: "3 комнаты", value: "3" },
      { label: "4 комнаты", value: "4" },
      { label: "5 комнат", value: "5" },
      { label: "6 комнат", value: "6" },
      { label: "7 комнат", value: "7" },
...
        </View>
      </View>
    );
  };

  const inputListConstruction = [
    { text: "Стены", placeholder: "Материал", valueName: "wallMaterial" },
    {
      text: "Перегородки",
      placeholder: "Материал",
      valueName: "partitionMaterial",
    },
    { text: "Фундамент", placeholder: "Тип фундамента", valueName: "basement" },
    { text: "Кровля", placeholder: "Тип кровли", valueName: "roof" },
  ];

  const constructiveHousePickerList = {
    wallMaterial: [
      { label: "Кирпич", value: "Кирпич" },
      { label: "Газоблок", value: "Газоблок" },
      { label: "Пеноблок", value: "Пеноблок" },
      { label: "Брус", value: "Брус" },
      { label: "Доска", value: "Доска" },
      { label: "Каркасный", value: "Каркасный" },
    ],
    partitionMaterial: [
      { label: "Дерево", value: "Дерево" },
      { label: "Гипсокартон", value: "Гипсокартон" },
      { label: "Газобетон", value: "Газобетон" },
      { label: "Керамзитоблоки", value: "Керамзитоблоки" },
      { label: "Кирпич", value: "Кирпич" },
    ],
    basement: [
      { label: "Ленточный", value: "Ленточный" },
      { label: "Плитный", value: "Плитный" },
      { label: "Столбчатый", value: "Столбчатый" },
      { label: "На сваях", value: "На сваях" },
    ],
    roof: [
      { label: "Металлочерепица", value: "Металлочерепица" },
      { label: "Битумная черепица", value: "Битумная черепица" },
      { label: "Керамическая черепица", value: "Керамическая черепица" },
      { label: "Шифер", value: "Шифер" },
      { label: "Ондулин", value: "Ондулин" },
    ],
  };
...
      text: "Наличие электричества",
      placeholder: "Подключено",
      valueName: "electricity",
    },
    {
      text: "Водоснабжение",
      placeholder: "Тип водоснабжения",
      valueName: "water",
    },
    { text: "Газ", placeholder: "Подключение", valueName: "gas" },
    {
      text: "Отопление",
      placeholder: "Тип системы отопления",
      valueName: "heating",
    },
    {
      text: "Канализация",
      placeholder: "Тип системы канализации",
      valueName: "sewerege",
    },
  ];

  const communicationsPickerDataList = {
    electricity: [
...
    ],
    water: [
      {
        label: "Центральное водоснабжение",
        value: "Центральное водоснабжение",
      },
      { label: "Скважина", value: "Скважина" },
    ],
    gas: [
      { label: "Подключен", value: "true" },
      { label: "Не подключен", value: "false" },
    ],
    heating: [
      { label: "Газовый котел", value: "Газовый котел" },
      { label: "Электрический котел", value: "Электрический котел" },
      { label: "Печь", value: "Печь" },
      { label: "Нет", value: "Нет" },
    ],
    sewerege: [
      { label: "Центральная канализация", value: "Центральная канализация" },
      { label: "Септик", value: "Септик" },
      { label: "Ж/Б кольцо", value: "Ж/Б кольцо" },
      { label: "Нет", value: "Нет" },
    ],
  };

...
            <View style={propertyStyle.row}>
              <InputProperty
                title="Цена, руб*"
                handleInputChange={handleInputChange}
                value={formData.price}
                valueName={"price"}
                placeholder="2 000 000"
                keyboardType="numeric"
              />
            </View>
          </View>
        </View>
      </View>
...
            >
              <Text
                style={
                  isPageValid() ? styles.buttonText : styles.buttonDisabledText
                }
              >
                {page === 5 ? "Создать объявление" : "Далее"}
              </Text>
            </Pressable>
          </View>
        </View>
        <Modal animationType="fade" visible={isLoading}>
          <View
...
