...
const containerHorizontalPadding = 12;
const gap = 12;
const containerWidth = width - 32;
const availableWidth = containerWidth - 2 * containerHorizontalPadding;

const InputImage = (props) => {
    const { showImages = true, selectionLimit = 20, setFormData, photos, label = "Фото", buttonText = "Загрузить изображения", title = "Фотографии", widthMinus = 32, verticalMargin = 16, marginTop = 16 } = props;
    const showToast = useToast();

    const styles = makeStyle(widthMinus, verticalMargin, marginTop);

    const pickImages = async () => {
        const { status } = await ImagePicker.requestMediaLibraryPermissionsAsync();
...
