...
      text: "Населённый пункт",
      placeholder: "Улица, Дом",
      valueName: "full_address",
    },
    {
      text: "Кадастровые номер",
      placeholder: "Кадастровый Номер",
      valueName: "kad_number",
    },
  ];

  const inputListHouseinfo = [
    {
...
