...
              columnGap: 8,
              justifyContent: "space-between",
            }}
          >
            <HeaderButton
              icon={<AntDesign name="home" size={20} color="#2C88EC" />}
              title="Добавить объявление"
              handleButton={() => setIsShowModalCreate(true)}
            />
            <HeaderButton
              icon={<Octicons name="search" size={20} color="#2C88EC" />}
              title="Поиск дома"
              handleButton={() => navigation.navigate("Поиск")}
...
