appId: com.bastithouses.app
---
- tapOn: "Добавить объявление"
- tapOn: "Загрузить изображения"
- tapOn:
    point: "17%,59%"
- tapOn: "Done"
- tapOn: "Далее"
- tapOn: "Название населённого пункта"
- inputText: "Moscow"
- tapOn: "Улица, Дом"
- inputText: "Kirova 1"
- tapOn: "Кадастровый Номер"
- inputText: 1223342234
- tapOn: "Далее"
- tapOn: Выберите тип дома
- tapOn: "ИЖС"
- tapOn: "2000"
- tapOn: "2025"
- tapOn: "Количество этажей"
- tapOn: "1 этаж"
- tapOn: "Количество комнат"
- tapOn: "1 комната"
- tapOn: "Жилплощадь (м²)"
- inputText: 80
- tapOn: "Площадь участка (сот.)"
- inputText: 100
- tapOn: "Далее"
- tapOn: "Стены"
- tapOn: "Кирпич"
- tapOn: "Перегородки"
- tapOn: "Дерево"
- tapOn: "Фундамент"
- tapOn: "Ленточный"
- tapOn: "Кровля"
- tapOn: "Металлочерепица"
- tapOn: "Далее"

- tapOn: "Выбрать тариф"
- tapOn: "Льготный тариф"
- tapOn: "Тип водоснабжения"
- tapOn: "Скважина"
- tapOn: "Подключение"
- tapOn: "Подключен"
- tapOn: "Тип системы отопления"
- tapOn: "Газовый котел"
- tapOn: "Тип системы канализации"
- tapOn: "Центральная канализация"
- tapOn: "Далее"

- tapOn: "2 000 000"
- inputText: 99999999
- tapOn: "Создать объявление"
- tapOn: "OK"
